--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -27,22 +27,44 @@
             android:layout_height="250dp"
             android:src="@drawable/logo_indosayur1"/>
 
-        <Button
-            android:background="@color/Hijau"
-            android:layout_width="175dp"
-            android:layout_height="35dp"
-            android:text="@string/masuk"
-            android:textSize="16sp"
-            android:textColor="@color/white"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginRight="35dp"
+            android:text="Sudah Punya Akun ?"
+            android:textColor="@color/black"
+            android:textSize="14sp" />
 
         <Button
-            android:background="@color/Orange"
-            android:layout_marginTop="15dp"
-            android:layout_width="175dp"
-            android:layout_height="35dp"
-            android:text="@string/daftar"
+            android:id="@+id/btn_proseslogin"
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:background="@drawable/btn_masuk"
+            android:text="@string/masuk"
+            android:textColor="@color/white"
             android:textSize="16sp"
-            android:textColor="@color/white"/>
+            android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="35dp"
+            android:layout_marginBottom="10dp"
+            android:text="Belum Punya Akun ?"
+            android:textColor="@color/black"
+            android:textSize="14sp"/>
+
+        <Button
+            android:id="@+id/btn_register"
+            android:background="@drawable/btn_daftar"
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:text="@string/daftar"
+            android:textStyle="bold"
+            android:textSize="16sp"
+            android:textColor="@color/Hijau"/>
 
     </LinearLayout>
 
