--- a/app/src/main/res/layout/item_produk.xml
+++ b/app/src/main/res/layout/item_produk.xml
@@ -16,7 +16,7 @@
             android:id="@+id/img_produk"
             android:layout_width="150dp"
             android:layout_height="150dp"
-            android:src="@drawable/sayur_asem"/>
+            android:src="@drawable/logo_indosayurthumbnail"/>
 
         <TextView
             android:layout_marginTop="4dp"
