--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="Hijau">#098F4B</color>
     <color name="Orange">#FF9800</color>
+    <color name="grey">#69696969</color>
 
 </resources>
