--- a/app/src/main/res/layout/activity_detail_produk.xml
+++ b/app/src/main/res/layout/activity_detail_produk.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical"
-    tools:context="Activity.DetailProdukActivity">
+    tools:context="activity.DetailProdukActivity">
 
     <include
         layout="@layout/toolbar_custom"
