--- a/app/src/main/res/layout/activity_detail_produk.xml
+++ b/app/src/main/res/layout/activity_detail_produk.xml
@@ -190,9 +190,9 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:layout_marginTop="10dp"
-                        android:text="imtisto@gmail.com"
+                        android:text="082234036161"
                         android:textColor="@color/Hijau"
-                        android:textSize="13dp" />
+                        android:textSize="16dp" />
 
                 </LinearLayout>
 
