--- a/app/src/main/res/drawable/bg_penambahan.xml
+++ b/app/src/main/res/drawable/bg_penambahan.xml
@@ -2,8 +2,9 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <corners android:radius="9dp" />
-            <gradient android:angle="-90" android:endColor="@color/Orange" android:startColor="@color/Orange" />
+            <corners android:radius="15dip" />
+            <stroke android:width="1dip" android:color="@color/Hijau" />
+            <solid android:color="@color/white"/>
         </shape>
     </item>
 </selector>
