--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <RelativeLayout
-        android:background="@color/design_default_color_primary"
+        android:background="@color/Hijau"
         android:padding="10dp"
         android:orientation="horizontal"
         android:layout_width="match_parent"
