--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -30,7 +30,7 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_baseline_account_circle_24"
+                    android:src="@drawable/ic_baseline_account_circle_hijau_24"
                     android:layout_marginTop="5dp"
                     android:layout_marginRight="10dp"/>
 
@@ -221,7 +221,7 @@
                 android:layout_width="0dp"
                 android:layout_height="1dp"
                 android:layout_weight="1"
-                android:background="#E0E0E0E0"/>
+                android:background="@color/Hijau"/>
 
             <TextView
                 android:layout_marginHorizontal="10dp"
@@ -233,7 +233,7 @@
                 android:layout_width="0dp"
                 android:layout_height="1dp"
                 android:layout_weight="1"
-                android:background="#E0E0E0E0"/>
+                android:background="@color/Hijau"/>
         </LinearLayout>
         <RelativeLayout
             android:id="@+id/btn_google"
