--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="Hijau">#098F4B</color>
     <color name="Orange">#FF9800</color>
     <color name="grey">#69696969</color>
+    <color name="oldgrey">#69353535</color>
 </resources>
