--- a/app/src/main/res/layout/item_produk.xml
+++ b/app/src/main/res/layout/item_produk.xml
@@ -31,6 +31,17 @@
             android:text="Nama Produk"/>
 
         <TextView
+            android:textSize="14dp"
+            android:textColor="@color/grey"
+            android:textStyle="bold"
+            android:layout_marginTop="8dp"
+            android:layout_marginHorizontal="5dp"
+            android:id="@+id/tv_HargaAsli"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Rp.0"/>
+
+        <TextView
             android:textSize="16dp"
             android:textColor="@color/Hijau"
             android:textStyle="bold"
