--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -14,7 +14,8 @@
             android:theme="@style/ThemeOverlay.AppCompat"
             app:contentInsetStartWithNavigation="0dp"
             app:paddingEnd="5dp"
-            app:popupTheme="@style/ThemeOverlay.AppCompat" />
+            app:popupTheme="@style/ThemeOverlay.AppCompat"
+            app:titleTextColor="@color/white" />
 
 
 </com.google.android.material.appbar.AppBarLayout>
