Tutorial 46 change date format

--- a/app/src/main/res/layout/item_riwayat.xml
+++ b/app/src/main/res/layout/item_riwayat.xml
@@ -121,7 +121,7 @@
                     android:layout_height="wrap_content"
                     android:ellipsize="marquee"
                     android:text="DETAILS"
-                    android:textColor="@color/Orange"
+                    android:textColor="@color/biru"
                     android:textStyle="bold" />
 
             </LinearLayout>
