--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,9 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="Hijau">#098F4B</color>
+    <color name="Merah">#B10C00</color>
     <color name="Orange">#FF9800</color>
     <color name="grey">#69696969</color>
     <color name="oldgrey">#69353535</color>
+    <color name="biru">#022455</color>
 </resources>
